@@ -146,9 +146,9 @@ public class JavaMethodBreakpoint extends JavaLineBreakpoint implements IJavaMet
 				addLineBreakpointAttributes(attributes, getModelIdentifier(), true, lineNumber, charStart, charEnd);
 				addMethodNameAndSignature(attributes, methodName, methodSignature);
 				addTypeNameAndHitCount(attributes, typePattern, hitCount);
-				attributes.put(ENTRY, new Boolean(entry));
-				attributes.put(EXIT, new Boolean(exit));
-				attributes.put(NATIVE, new Boolean(nativeOnly));
+				attributes.put(ENTRY, Boolean.valueOf(entry));
+				attributes.put(EXIT, Boolean.valueOf(exit));
+				attributes.put(NATIVE, Boolean.valueOf(nativeOnly));
 				
 				//set attributes
 				ensureMarker().setAttributes(attributes);
@@ -639,7 +639,7 @@ public class JavaMethodBreakpoint extends JavaLineBreakpoint implements IJavaMet
 	protected boolean usesTypePattern() throws CoreException {
 		if (fUsesTypePattern == null) {
 			String name = getTypeName();
-			fUsesTypePattern= new Boolean(name != null && (name.startsWith("*") || name.endsWith("*"))); //$NON-NLS-1$ //$NON-NLS-2$
+			fUsesTypePattern= Boolean.valueOf(name != null && (name.startsWith("*") || name.endsWith("*"))); //$NON-NLS-1$ //$NON-NLS-2$
 		}
 		return fUsesTypePattern.booleanValue();
 	}
